Squashed commit of the following:
commit d872b148634b7f50f448f5f6b0265e45069f01d4
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:36:20 2022 +0300

    Update WeatherForecast.cs

commit efadf28ca7f5f70d2b806d60dbf68b59c647d24f
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:35:13 2022 +0300

    .

commit a652c15ee41c425b0b7148dd14a7d3790ea74f82
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:24:24 2022 +0300

    Update .gitignore

commit 5649eb326c47ccec4e7dfe18675904920831ff85
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:20:03 2022 +0300

    .

commit 7c643cd78aa5b2c2e84b1f2d4889440aa2ed53de
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:18:55 2022 +0300

    Update .gitignore

commit 4d66baf9fb437fa75232b635ab96bfd308e1cc30
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:15:29 2022 +0300

    Update .gitignore

commit f5d9b689f8bf817733eeff21d7105eba5189859b
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:14:31 2022 +0300

    Update .gitignore

commit ced5e58d63a089793ba15fd207500473d8097a41
Author: Eusebiu Volostiuc <evolostiuc@yahoo.ro>
Date:   Wed Apr 13 15:09:36 2022 +0300

    Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,21 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+AcademicInfo/.vs/
+
+AcademicInfo/AcademicInfoClient/.angular/
+AcademicInfo/AcademicInfoClient/.vs/
+AcademicInfo/AcademicInfoClient/.vscode/
+AcademicInfo/AcademicInfoClient/node_modules/
+
+AcademicInfo/AcademicInfoServer/.vs/
+AcademicInfo/AcademicInfoServer/bin/
+AcademicInfo/AcademicInfoServer/obj/
+
+*.suo
+*.dll
+*.dll
+*.pdb
+*.cache
+*.sentinel
