--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,27 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.v2
+*.v2
+*.v1
+AcademicInfo/.vs/AcademicInfo/DesignTimeBuild/.dtbcache.v2
+AcademicInfo/.vs/AcademicInfo/v17/.futdcache.v1
+AcademicInfo/.vs/AcademicInfo/v17/.suo
+*.dll
+*.exe
+*.pdb
+AcademicInfo/AcademicInfoServer/obj/AcademicInfoServer.csproj.nuget.dgspec.json
+*.props
+*.cache
+*.cache
+*.cache
+*.txt
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.csproj.FileListAbsolute.txt
+*.dll
+*.editorconfig
+*.cache
+*.pdb
+*.exe
+AcademicInfo/AcademicInfoServer/obj/project.assets.json
+*.cache
+*.sentinel
