Added get /api/student
added logic for getting the info about the current logged student

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,20 @@ AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/refint/AcademicInfoServer.dll
 AcademicInfo/AcademicInfoServer/obj/project.assets.json
 AcademicInfo/AcademicInfoServer/obj/project.nuget.cache
 AcademicInfo/AcademicInfoServer/obj/staticwebassets.pack.sentinel
+AcademicInfo/AcademicInfoServer/.vs/AcademicInfoServer/v17/.suo
+AcademicInfo/AcademicInfoServer/bin/Debug/net6.0/AcademicInfoServer.dll
+AcademicInfo/AcademicInfoServer/bin/Debug/net6.0/AcademicInfoServer.pdb
+AcademicInfo/AcademicInfoServer/obj/AcademicInfoServer.csproj.nuget.dgspec.json
+AcademicInfo/AcademicInfoServer/obj/AcademicInfoServer.csproj.nuget.g.props
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.assets.cache
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.csproj.AssemblyReference.cache
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.csproj.CoreCompileInputs.cache
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.dll
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.GeneratedMSBuildEditorConfig.editorconfig
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.genruntimeconfig.cache
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/AcademicInfoServer.pdb
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/ref/AcademicInfoServer.dll
+AcademicInfo/AcademicInfoServer/obj/Debug/net6.0/refint/AcademicInfoServer.dll
+AcademicInfo/AcademicInfoServer/obj/project.assets.json
+AcademicInfo/AcademicInfoServer/obj/project.nuget.cache
+AcademicInfo/AcademicInfoServer/obj/staticwebassets.pack.sentinel
