--- a/AcademicInfo/AcademicInfoServer/AcademicInfoServer.csproj
+++ b/AcademicInfo/AcademicInfoServer/AcademicInfoServer.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Photos\Staff\" />
+    <Folder Include="Photos\Teachers\" />
+    <Folder Include="Photos\Students\" />
+  </ItemGroup>
+
 </Project>
